objects/DuplicateRecordItem.object
<CustomObject>
    <fields>
        <fullName>DecsOnD__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Duplicate Record Items</relationshipLabel>
        <relationshipName>Duplicate_Record_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Duplicate Record Items</relationshipLabel>
        <relationshipName>Duplicate_Record_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Duplicate Record Items</relationshipLabel>
        <relationshipName>Duplicate_Record_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Rule_Name__c</fullName>
        <formula>DuplicateRecordSet.DecsOnD__Rule_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Name</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>